# xreal-vio-vr

./: .gitignore  .gitmodules  CHANGELOG.md  README.md
ar_runtime/: README.md
ar_runtime/include/: ar_overlay.hpp  ar_pose.hpp  dead_reckoning.hpp  floor_estimate.hpp  gps_interface.hpp  soft_tracking.hpp
config/: TEMPLATE_xreal_ultra.yaml
openvr/: CMakeLists.txt
openvr/src/: DeviceFactory.cpp  Driver.cpp  Driver.hpp  HMDDevice.cpp  HMDDevice.hpp
patches/Basalt patches--by_kukikap/: basalt_fisheye624.patch  basalt_headers_fisheye624.patch
tmp/: downgrade_and_rebuild_orbslam.sh  orbslam_build_log.txt
xr/steamvr-bridge/: CMakeLists.txt  bridge.cpp
xr/steamvr-bridge/include/steamvr_bridge/: bridge.h
xr/steamvr-bridge/src/: bridge_impl.cpp  ground_calibration_fsm.h  pose_adapter.cpp
